contrib/bd_flex-echo.in: example custom script.

--- a/scripts/Makefile.in
+++ b/scripts/Makefile.in
@@ -275,7 +275,7 @@ top_build_prefix = @top_build_prefix@
 top_builddir = @top_builddir@
 top_srcdir = @top_srcdir@
 bin_SCRIPTS = bd_flex-run bdbox-run  bdbox-xyz
-EXTRA_DIST = $(bin_SCRIPTS)
+EXTRA_DIST = 
 CLEANFILES = $(bin_SCRIPTS)
 all: all-am
 
