contrib/bd_flex-msub: job submitter for judge@gz-juelich.de

--- a/configure.ac
+++ b/configure.ac
@@ -2,7 +2,7 @@
 # Process this file with autoconf to produce a configure script.
 
 AC_PREREQ([2.63])
-AC_INIT([bcp-tools], [0.2.11], [s.kondrat@fz-juelich.de])
+AC_INIT([bcp-tools], [0.2.12], [s.kondrat@fz-juelich.de])
 
 AM_INIT_AUTOMAKE()
 AC_CONFIG_MACRO_DIR([m4])
@@ -96,5 +96,6 @@ AC_CONFIG_FILES([Makefile
 		 scripts/bdbox-xyz
 		 contrib/Makefile
 		 contrib/bd_flex-echo
+		 contrib/bd_flex-msub
 		 ])
 AC_OUTPUT
