--- a/contrib/Makefile.am
+++ b/contrib/Makefile.am
@@ -1,5 +1,4 @@
-noinst_SCRIPTS = bd_flex-echo
+noinst_SCRIPTS = bd_flex-echo bd_flex-msub
 
 CLEANFILES = $(noinst_SCRIPTS)
-
 #EXTRA_DIST = ChangeLog
