--- a/contrib/bd_flex-msub.in
+++ b/contrib/bd_flex-msub.in
@@ -1,7 +1,7 @@
 #!/bin/bash
 #
-# bd_flex-echo (c) S. Kondrat (aka Valiska)  2013 custom bd_flex script 
-# this is for testing, see bd_flex-msub for a more useful script
+# bd_flex-msub (c) S. Kondrat (aka Valiska)  2013  custom bd_flex script 
+# for judge cluster @ fz-juelich for job submision with MOAB
 # 
 # This script is free software; you can redistribute it and/or modify
 # it under the terms of the GNU General Public License as published by
@@ -83,8 +83,38 @@ done
 
 shift $(($OPTIND - 1))
 
-# We just echo the command
-echo $bdflex $cmd
+# Check if there is msub
+msub=`which msub`
+if test -n "$msub"; then
+	msub="$msub -l nodes=1:ppn=10:gpus=2 -V -S /bin/bash"
+else
+	msub="bash"
+fi
+
+# Check input file and create qsub file
+if test -z "$input"; then
+	echo "$myname: error: no input file, use -i FILE"
+	exit 1;
+fi
+if test ! -f "$input"; then
+	echo "$myname: error: no input file '$input'"
+	exit 1;
+fi
+qsubfile="`basename $input .prm`.qsub"
+if test -f "$qsubfile"; then
+	count=1
+	while true; do
+		if test ! -f "$qsubfile.$count"; then
+			qsubfile=$qsubfile.$count
+			break
+		fi
+		count=$[$count+1]
+	done
+fi
+echo $bdflex $cmd > $qsubfile
+
+# Run/submit a job
+$msub $qsubfile
 
 exit 0;
 
