scripts/bd_flex-run: cd to working directory before running bd_flex

--- a/scripts/bd_flex-run.in
+++ b/scripts/bd_flex-run.in
@@ -188,6 +188,8 @@ else
 fi
 echo $bdflex $input $bdflex_opts >> $running
 
+# Run from working directory
+cd $directory
 OMP_NUM_THREADS=$nproc $bdflex $input $bdflex_opts
 
 # Uh, we've done
