Re-run/queue bug fix
scripts/bd_flex-run: bug fix: check for re-run/queue script.

contrib/bd_flex-msub: pass itself to bd_flux-run.

--- a/contrib/bd_flex-msub.in
+++ b/contrib/bd_flex-msub.in
@@ -19,6 +19,8 @@
 #
 # my dear self
 myname=$(basename $0)
+# my full path
+myself=$(realpath $0)
 # others
 bdflex=@BDFLEX_RUN@
 
@@ -83,6 +85,7 @@ done
 
 shift $(($OPTIND - 1))
 
+
 # Check if there is msub
 msub=`which msub`
 if test -n "$msub"; then
@@ -111,7 +114,7 @@ if test -f "$qsubfile"; then
 		count=$[$count+1]
 	done
 fi
-echo $bdflex $cmd > $qsubfile
+echo $bdflex $cmd -r $myself > $qsubfile
 
 # Run/submit a job
 $msub $qsubfile
