--- a/contrib/Makefile.in
+++ b/contrib/Makefile.in
@@ -185,6 +185,7 @@ PACKAGE_TARNAME = @PACKAGE_TARNAME@
 PACKAGE_URL = @PACKAGE_URL@
 PACKAGE_VERSION = @PACKAGE_VERSION@
 PATH_SEPARATOR = @PATH_SEPARATOR@
+QUEUE = @QUEUE@
 RANLIB = @RANLIB@
 RUNNING = @RUNNING@
 SED = @SED@
