--- a/scripts/bdbox-run.in
+++ b/scripts/bdbox-run.in
@@ -47,11 +47,18 @@ function usage()
   echo "  -b BASE                  custom base name for files (default input file)."
 
   echo "Molecular system options:"
-  echo "  -H Hx,Hy,Hz             box size."
+  echo "  -H Hx,Hy,Hz             box size (in A)."
   echo "  -n N1,N2,..             particle's names."
-  echo "  -r R1,R2,..             particle's radii."
+  echo "  -r R1,R2,..             particle's radii (in A)."
   echo "  -N N1,N2,..             number of particles."
+  echo "  -j E1,E2,..             LJ parameters (kcal/mol, default 1)."
+  echo "  -q Q1,Q2,..             charges (in e; default 0)."
+  echo "  -m M1,M2,..             masses (arbitrary, default 1)."
+  echo "  -S R1,R2,..             Stockes radia (in A, default HS radia)."
   echo "  -T VAL,VAL,..           placement type(rand,cent,lat)."
+  echo "  -t VAL                  number of tries for rand placement."
+  echo "  -a                      separate STR file for each run (not implemented)."
+
   echo
 
   echo "Simulation options:"
@@ -113,7 +120,7 @@ function prm_prepare ()
 #
 # Options
 #
-while getopts "d:B:i:H:n:r:N:R:T:s:p:b:cv?:" Option
+while getopts "d:B:i:cs:H:n:r:N:j:q:m:S:T:t:aR:p:b:v?:" Option
 do
   case $Option in
 
@@ -140,14 +147,29 @@ do
     r  ) molsys_opt="$molsys_opt -r$OPTARG"
          cmd="${cmd} -r $OPTARG";;
 
+    j  ) molsys_opt="$molsys_opt -j$OPTARG"
+         cmd="${cmd} -j $OPTARG";;
+
+    q  ) molsys_opt="$molsys_opt -q$OPTARG"
+         cmd="${cmd} -q $OPTARG";;
+
+    m  ) molsys_opt="$molsys_opt -m$OPTARG"
+         cmd="${cmd} -m $OPTARG";;
+
+    S  ) molsys_opt="$molsys_opt -d$OPTARG"
+         cmd="${cmd} -S $OPTARG";;
+
+    T  ) molsys_opt="$molsys_opt -T$OPTARG"
+         cmd="${cmd} -T $OPTARG";;
+
+    t  ) molsys_opt="$molsys_opt -t$OPTARG"
+         cmd="${cmd} -t $OPTARG";;
+
     N  ) molsys_opt="$molsys_opt -N$OPTARG"
          cmd="${cmd} -N $OPTARG";;
 
     R  ) nrun="$OPTARG"
          cmd="${cmd} -R $OPTARG";;
-
-    T  ) molsys_opt="$molsys_opt -T$OPTARG"
-         cmd="${cmd} -T $OPTARG";;
 
     p  ) nproc="-p $OPTARG"
          cmd="${cmd} -p $OPTARG";;
@@ -249,9 +271,9 @@ else # We do not continue, check for prm and create str
 	strfile=$directory/$base.str
 
 	# create STR file
-	molsys_opt="$molsys_opt -R0,0,0 -m1,1 -j0,0 -q0,0 "
+	molsys_opt="$molsys_opt -R0,0,0 "
 	echo $molsys $molsys_opt
-	$molsys $molsys_opt > $strfile
+	$molsys $molsys_opt -s $strfile
 	if test $? != 0; then
 		echo "$myname: `basename $molsys` failed, see error above"
 		exit 1
