scripts/bdbox-run: -a option: separate str for each run.

--- a/contrib/bd_flex-msub.in
+++ b/contrib/bd_flex-msub.in
@@ -19,9 +19,9 @@
 #
 #
 # 
-msub="/opt/moab/bin/msub -l nodes=1:ppn=10:gpus=2 -V -S /bin/bash"
-msub="ssh judge /opt/moab/bin/msub -l nodes=1:ppn=10:gpus=2 -V -S /bin/bash"
-#msub="bash"
+#msub="/opt/moab/bin/msub -l nodes=1:ppn=10:gpus=2 -V -S /bin/bash"
+#msub="ssh judge /opt/moab/bin/msub -l nodes=1:ppn=10:gpus=2 -V -S /bin/bash"
+msub="bash"
 
 # my dear self
 myname=$(basename $0)
