--- a/scripts/bdbox-run.in
+++ b/scripts/bdbox-run.in
@@ -174,6 +174,9 @@ do
     p  ) nproc="-p $OPTARG"
          cmd="${cmd} -p $OPTARG";;
 
+    a  ) sepstr="yes"
+         cmd="${cmd} -a";;
+
     b  ) custom_base="$OPTARG"
          cmd="${cmd} -b $OPTARG";;
 
@@ -246,6 +249,13 @@ if test "x$cont" == "xyes"; then
 	# all fine, we have one str file
 	strfile=$directory/$strs
 	strfile=$(readlink -f $strfile)
+	strcmd=${strfile}.cmd
+	if test "x$sepstr" == "xyes"; then
+		if test ! -f "${strcmd}"; then
+			echo "$myname: error: no '${strcmd}' do not know how to cleare system."
+			exit 1;
+		fi
+	fi
 	echo "Using '$strfile'"
 
 else # We do not continue, check for prm and create str
@@ -272,7 +282,9 @@ else # We do not continue, check for prm and create str
 
 	# create STR file
 	molsys_opt="$molsys_opt -R0,0,0 "
-	echo $molsys $molsys_opt
+	strcmd=${strfile}.cmd
+	echo $molsys $molsys_opt > $strcmd
+	strcmd=$(readlink -f $strcmd)
 	$molsys $molsys_opt -s $strfile
 	if test $? != 0; then
 		echo "$myname: `basename $molsys` failed, see error above"
@@ -310,6 +322,18 @@ do
 		lbase=${base}_r$irun
 	else
 		lbase=${custom_base}_r$irun
+	fi
+
+	if test "x$sepstr" == "xyes"; then
+		strfile=$idir/$lbase.str
+		molsysrun="`cat $strcmd` -s $strfile"
+		echo $molsysrun
+		$molsysrun
+		if test $? != 0; then
+			echo "$myname: `basename $molsys` failed, skipping run $irun."
+			continue;
+		fi
+		strfile=$(readlink -f $strfile)
 	fi
 
 	prm_prepare $baseprm $strfile $lbase > $idir/$lbase.prm
