--- a/tools/Makefile.in
+++ b/tools/Makefile.in
@@ -249,6 +249,7 @@ ECHO_C = @ECHO_C@
 ECHO_N = @ECHO_N@
 ECHO_T = @ECHO_T@
 EGREP = @EGREP@
+ERROR = @ERROR@
 EXEEXT = @EXEEXT@
 FGREP = @FGREP@
 GREP = @GREP@
