--- a/configure.ac
+++ b/configure.ac
@@ -2,7 +2,7 @@
 # Process this file with autoconf to produce a configure script.
 
 AC_PREREQ([2.63])
-AC_INIT([bcp-tools], [0.2.20], [s.kondrat@fz-juelich.de])
+AC_INIT([bcp-tools], [0.2.21], [s.kondrat@fz-juelich.de])
 
 AM_INIT_AUTOMAKE()
 AC_CONFIG_MACRO_DIR([m4])
@@ -91,6 +91,7 @@ AC_CONFIG_FILES([Makefile
                  lib/Makefile
                  lib/tests/Makefile
                  tools/Makefile
+                 tools/fit-pow.sh
 		 scripts/Makefile
 		 scripts/bd_flex-run
 		 scripts/bdbox-run
