--- a/Makefile.in
+++ b/Makefile.in
@@ -234,6 +234,7 @@ EGREP = @EGREP@
 ERROR = @ERROR@
 EXEEXT = @EXEEXT@
 FGREP = @FGREP@
+GNUPLOT = @GNUPLOT@
 GREP = @GREP@
 HAVE_CXX11 = @HAVE_CXX11@
 INSTALL = @INSTALL@
@@ -253,6 +254,7 @@ LTLIBOBJS = @LTLIBOBJS@
 MAKEINFO = @MAKEINFO@
 MANIFEST_TOOL = @MANIFEST_TOOL@
 MKDIR_P = @MKDIR_P@
+MPIRUN = @MPIRUN@
 NM = @NM@
 NMEDIT = @NMEDIT@
 OBJDUMP = @OBJDUMP@
