scripts/bdbox-xyz: -f/-p (fit/create ps) to fit data for diffusion coeff.

--- a/contrib/Makefile.in
+++ b/contrib/Makefile.in
@@ -124,6 +124,7 @@ AUTOHEADER = @AUTOHEADER@
 AUTOMAKE = @AUTOMAKE@
 AWK = @AWK@
 BCPT_AVERAGE = @BCPT_AVERAGE@
+BCPT_FIT = @BCPT_FIT@
 BCPT_MAINTAINER = @BCPT_MAINTAINER@
 BCPT_MOLSYS = @BCPT_MOLSYS@
 BCPT_XYZ = @BCPT_XYZ@
