--- a/scripts/bdbox-xyz.in
+++ b/scripts/bdbox-xyz.in
@@ -89,7 +89,8 @@ function scan_directory ()
 	
 	local dirs=
 	if test -d $dir; then
-		dirs=$(ls $dir)
+#		dirs=$(ls $dir)
+		dirs=$(find $dir/* -type d)
 	fi
 
 	for d in $dirs; do
@@ -209,20 +210,19 @@ fi
 nfiles=0
 cd $directory && scan_directory .
 
-maxargs=`getconf ARG_MAX`
-maxargs=$[$maxargs - 10]
-if test "$nfiles" -gt "$maxargs"; then
-	files_file=`mktemp $myname-xxxxxx`
-	echo $files > $files_file
-	average_files=" -F $files_file"
+files_file=`mktemp $myname-XXXXXX`
+if test -n "$files_file"; then
+    echo -n $files > $files_file
+    average_files=" -F $files_file"
 else
-	average_files="-f $files"
+    echo "$myname: cannot create a temporary file, sorry, I am giving up..."
+    exit 1
 fi
 
 echo
 echo "Avereging:"
 echo $average $average_files -k 0,5 $window
-$average -f $files -k 0,5 $window > $output
+$average $average_files -k 0,5 $window > $output
 echo "Avereging done."
 
 if test "z$dofit" = "zyes"; then
