--- a/contrib/bd_flex-msub.in
+++ b/contrib/bd_flex-msub.in
@@ -47,7 +47,7 @@ function usage()
   echo "  -c COUNT                continue (count to keep track on reruns)."
   echo "  -o \"OPTS\"               pass bd_flex options to the runner."
   echo "  -p NUM                  number of processes (for OpenMP)."
-  echo "  -M PROC,COL,ROW,BLOCK   number of processes, collons, rows and blocks for MPI."
+  echo "  -M MPIPROCS             number of MPI processes."
 
   echo
   echo "  -v                      print version information and exit."
@@ -74,17 +74,10 @@ do
     p  ) cmd="${cmd} -p $OPTARG";;
 
     M  )
-    	OLD_IFS="$IFS";
-	IFS=","
-	MPI_list=( ${OPTARG} )
-	if test "${#MPI_list[@]}" != 4; then
-	echo "$myname: -M required 4 comma-separated arguments. Use '$myname -h' for help."
-	exit 1;
-	fi
-	mpiproc="${MPI_list[0]}"
-	mpiproc2=$($nnodes * $ncores)
+  	mpiproc="$OPTARG"
+	mpiproc2=$(echo "$nnodes * $ncores" | bc -l)
 	if test "$mpiproc" != "$mpiproc2"; then
-		echo "$myname: error: nproc ($nproc) != nnodes x ncores = $nnodes x $ncores"
+		echo "$myname: error: thetotal number of MPI procs ($mpiproc) != nnodes x ncores = $nnodes x $ncores = $mpiproc2"
 		exit 1
 	fi
     	cmd="${cmd} -M $OPTARG";;
