--- a/tools/Makefile.am
+++ b/tools/Makefile.am
@@ -1,7 +1,7 @@
 bin_PROGRAMS = pdb2str molsys-create
 
-bin_SCRIPTS= analyze-xyz.py average-me.py fit-pow.sh
-EXTRA_DIST = $(bin_SCRIPTS)
+bin_SCRIPTS= analyze-xyz.py average-me.py fit-pow.sh 
+EXTRA_DIST = $(bin_SCRIPTS) taulex.py taux.py taux-2comp.py
 
 AM_CPPFLAGS= -Wall -DBCPT_MAINTAINER=\"@BCPT_MAINTAINER@\" -I$(top_srcdir)/lib/
 AM_LDFLAGS = -pedantic -ansi 
