--- a/tools/Makefile.in
+++ b/tools/Makefile.in
@@ -270,7 +270,7 @@ target_alias = @target_alias@
 top_build_prefix = @top_build_prefix@
 top_builddir = @top_builddir@
 top_srcdir = @top_srcdir@
-bin_SCRIPTS = analyze-xyz.py average-me.py fit-pow.sh 
+bin_SCRIPTS = analyze-xyz.py average-mexp.py  average-me.py fit-pow.sh 
 EXTRA_DIST = $(bin_SCRIPTS) taulex.py taux.py taux-2comp.py
 AM_CPPFLAGS = -Wall -DBCPT_MAINTAINER=\"@BCPT_MAINTAINER@\" -I$(top_srcdir)/lib/
 AM_LDFLAGS = -pedantic -ansi 
