molb2dat: molb -> data file with time and coords

--- a/tools/Makefile.am
+++ b/tools/Makefile.am
@@ -1,4 +1,4 @@
-bin_PROGRAMS = pdb2str molsys-create
+bin_PROGRAMS = pdb2str molsys-create molb2dat
 
 bin_SCRIPTS= analyze-xyz.py average-mexp.py  average-me.py fit-pow.sh 
 EXTRA_DIST = $(bin_SCRIPTS) taulex.py taux.py taux-2comp.py
@@ -11,3 +11,5 @@ pdb2str_LDADD = $(top_srcdir)/lib/libMol.la
 
 molsys_create_SOURCES = molsys.cc str.h str.c 
 molsys_create_LDADD = $(top_srcdir)/lib/libMol.la
+
+molb2dat_SOURCES = molb2dat-main.c molb2dat.c str.c
